refactor: transform infrastructure from basic setup to enterprise-grade security architecture
This major refactor completely restructures the AWS infrastructure from a single-instance
basic setup to a production-ready, enterprise-grade secure architecture following AWS
Well-Architected Framework principles and Terraform best practices.

Architecture Changes:
- Migrated from single EC2 instance to multi-AZ high availability architecture
- Implemented Application Load Balancer with Auto Scaling Group for elasticity
- Established private/public subnet segmentation across multiple availability zones
- Added NAT Gateways for secure outbound internet access from private subnets
- Deployed bastion host in public subnet for secure administrative access

Security Enhancements:
- Implemented least-privilege IAM roles and instance profiles
- Created security group segmentation (ALB, web tier, bastion)
- Enabled VPC Flow Logs for network traffic monitoring and compliance
- Enforced EBS volume encryption for data at rest
- Configured IMDSv2 requirement for enhanced instance metadata security
- Added comprehensive security analysis with tfsec and checkov validation

Code Organization:
- Restructured monolithic main.tf into modular components:
  * terraform.tf - Version constraints and backend configuration
  * providers.tf - AWS provider with default resource tags
  * variables.tf - Enhanced variable definitions with validation rules
  * locals.tf - Computed values and consistent naming conventions
  * networking.tf - VPC, subnets, route tables, NAT gateways, flow logs
  * security.tf - Security groups with least-privilege rules
  * compute.tf - ALB, target groups, ASG, launch templates, bastion
  * iam.tf - IAM roles, policies, and instance profiles
  * outputs.tf - Comprehensive output values for resource references

New Files:
- user_data.sh - Web server bootstrap script with nginx installation
- bastion_user_data.sh - Bastion hardening script with security configurations
- te

--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,89 @@
+# ---------------------------------------------------------
+# TERRAFORM GITIGNORE
+# ---------------------------------------------------------
+
 # Local .terraform directories
 **/.terraform/*
 
-# .tfstate files (CONTIENEN SECRETOS - NO SUBIR)
+# .tfstate files
 *.tfstate
 *.tfstate.*
 
 # Crash log files
 crash.log
-crash.*
+crash.*.log
 
 # Exclude all .tfvars files, which are likely to contain sensitive data
-# such as password, private keys, and other secrets.
 *.tfvars
 *.tfvars.json
 
+# Ignore override files as they are usually used to override resources locally
 override.tf
 override.tf.json
 *_override.tf
 *_override.tf.json
 
+# Include tfplan files to ignore the plan output of command: terraform plan -out=tfplan
+*tfplan*
+
+# Ignore CLI configuration files
 .terraformrc
 terraform.rc
+
+# ---------------------------------------------------------
+# ENVIRONMENT AND SECRETS
+# ---------------------------------------------------------
+
+# Environment variables
+.env
+.env.*
+
+# IDE files
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# ---------------------------------------------------------
+# CLOUD PROVIDER SPECIFIC
+# ---------------------------------------------------------
+
+# AWS
+.aws/
+
+# Azure
+.azure/
+
+# GCP
+.gcp/
+*.json
+!terraform.tfvars.example
+
+# ---------------------------------------------------------
+# LOGS AND TEMPORARY FILES
+# ---------------------------------------------------------
+
+# Log files
+*.log
+
+# Temporary files
+*.tmp
+*.temp
+.terraform.lock.hcl.backup
+
+# ---------------------------------------------------------
+# INFRACODEBASE SPECIFIC
+# ---------------------------------------------------------
+
+# Diagram files (generated)
+.infracodebase/
